--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Reader",
   "version": "1.0.0",
   "description": "Reader for sevice Reddit.",
-  "main": "app/main.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/Viktor777/reader",
   "devDependencies": {
-    "component-ajax": "0.0.2",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
     "gulp-jshint": "^1.10.0",
     "gulp-rename": "^1.2.2",
     "react": "^0.13.1",
+    "react-infinite-scroll": "^0.1.5",
     "reactify": "^1.1.0",
     "snoocore": "^2.8.0"
   }
