--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp-browserify": "^0.5.1",
     "gulp-jshint": "^1.10.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.2",
     "react": "^0.13.1",
     "react-infinite-scroll": "^0.1.5",
     "reactify": "^1.1.0",
